# Experimentator

./: .gitignore  README.md  pyproject.toml
experimentator/: __init__.py  experiment.py  experimentator.py  pipeline.py  trainer.py
experimentator/builtin/dataset/: pairwise_dataset.py
experimentator/builtin/logger/: __init__.py  text_file.py
experimentator/interfaces/: __init__.py  dataset.py  model.py
experimentator/objects/: __init__.py  experiment.py  experimentator.py  measurer.py  pipeline.py  trainer.py
src/: __init__.py  experiment.py  experimentator.py  pipeline.py  trainer.py
src/builtin/logger/: console.py
src/experimentator/: __init__.py  experiment.py  experimentator.py  measurer.py  pipeline.py  trainer.py
src/experimentator/interfaces/: model.py  persist.py
src/interfaces/: logger.py  model.py
