[project]
name = "experimentator"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "nodeflow",
    "torch>=2.6.0",
    "prologger"
]

[tool.uv.sources]
nodeflow = { git = "https://github.com/encore-ecosystem/NodeFlow" }
prologger = { path = "./prologger" }
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
