[project]
name = "experimentator"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "nodeflow",
    "torch>=2.6.0",
    "prologger",
    "cvtk",
]

[tool.uv.sources]
nodeflow = { git = "https://github.com/encore-ecosystem/NodeFlow", branch = "dev" }
prologger = { git = "https://github.com/encore-ecosystem/Prologger" }
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
cvtk = { git = "https://github.com/encore-ecosystem/CVTK", branch = "basic_usage" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
